--- a/.github/workflows/sync-and-build.yml
+++ b/.github/workflows/sync-and-build.yml
@@ -1,18 +1,59 @@
-name: Sync fork and build image
+name: Sync upstream & Build Docker
 
 on:
   schedule:
-    - cron: '0 * * * *'   # ogni ora
-  workflow_dispatch:       # esecuzione manuale opzionale
+    - cron: '0 */6 * * *'  # ogni 6 ore (modifica se vuoi)
+  workflow_dispatch:  # manuale da Actions tab
+
+permissions:
+  contents: write
+  pull-requests: write
 
 jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
-      - name: Sync fork with upstream
-        uses: tgymnich/fork-sync@v1
+      - name: Sync fork
+        uses: tgymnich/fork-sync@v1.7.0  # versione stabile
         with:
-          upstream_repository: wppconnect-team/wppconnect-server
-          upstream_branch: main
-          target_branch: main
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          owner: wppconnect-team
+          repo: wppconnect-server
+          token: ${{ secrets.GITHUB_TOKEN }}
+          head: main  # branch upstream da tracciare (verifica se è 'main' o 'master')
+          base: main  # tuo branch da aggiornare
+          auto_merge: true
+          pr_title: 'Sync upstream'
+          pr_message: 'Aggiornamento automatico da upstream'
+
+  build-docker:
+    needs: sync  # esegue solo dopo sync
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'  # evita build inutili
+    permissions:
+      contents: read
+      packages: write
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build & Push
+        uses: docker/build-push-action@v6  # v5+ raccomandata [web:21]
+        with:
+          context: .
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/wppconnect-server:latest
+            ghcr.io/${{ github.repository_owner }}/wppconnect-server:${{ github.sha }}
+          platforms: linux/amd64,linux/arm64  # multi-arch opzionale
