--- a/.github/workflows/sync-and-build.yml
+++ b/.github/workflows/sync-and-build.yml
@@ -2,58 +2,56 @@ name: Sync upstream & Build Docker
 
 on:
   schedule:
-    - cron: '0 */6 * * *'  # ogni 6 ore (modifica se vuoi)
-  workflow_dispatch:  # manuale da Actions tab
-
-permissions:
-  contents: write
-  pull-requests: write
+    - cron: '0 */6 * * *'  # Ogni 6 ore (adatta se vuoi)
+  workflow_dispatch:  # Manuale via UI
 
 jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
-      - name: Sync fork
-        uses: tgymnich/fork-sync@v1.7.0  # versione stabile
+      - name: Sync fork with upstream
+        uses: tgymnich/fork-sync@v1.7.2  # Versione stabile
         with:
           owner: wppconnect-team
           repo: wppconnect-server
+          head: main  # Branch upstream da seguire
+          base: main  # Branch tuo fork da aggiornare
           token: ${{ secrets.GITHUB_TOKEN }}
-          head: main  # branch upstream da tracciare (verifica se è 'main' o 'master')
-          base: main  # tuo branch da aggiornare
-          auto_merge: true
-          pr_title: 'Sync upstream'
-          pr_message: 'Aggiornamento automatico da upstream'
 
-  build-docker:
-    needs: sync  # esegue solo dopo sync
+  docker:
+    needs: sync
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' || github.event_name == 'workflow_dispatch'  # evita build inutili
     permissions:
       contents: read
-      packages: write
+      packages: write  # Per GHCR
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          ref: main
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to GHCR
+      - name: Login to GHCR  # O Docker Hub con secrets dedicati
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build & Push
-        uses: docker/build-push-action@v6  # v5+ raccomandata [web:21]
+      - name: Setup QEMU (multi-platform)
+        uses: docker/setup-qemu-action@v3
+
+      - name: Setup Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build & Push image
+        uses: docker/build-push-action@v6
         with:
           context: .
+          file: ./Dockerfile  # Conferma path nel repo
           push: true
           tags: |
             ghcr.io/${{ github.repository_owner }}/wppconnect-server:latest
             ghcr.io/${{ github.repository_owner }}/wppconnect-server:${{ github.sha }}
-          platforms: linux/amd64,linux/arm64  # multi-arch opzionale
+          platforms: linux/amd64,linux/arm64  # Opzionale, multi-arch
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
