Update fork-sync action to version 2.0.10

--- a/.github/workflows/sync-and-build.yml
+++ b/.github/workflows/sync-and-build.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Sync fork with upstream
-        uses: tgymnich/fork-sync@v1.7.2  # Versione stabile
+        uses: tgymnich/fork-sync@v2.0.10
         with:
           owner: wppconnect-team
           repo: wppconnect-server
