--- a/.github/workflows/sync-and-build.yml
+++ b/.github/workflows/sync-and-build.yml
@@ -2,15 +2,15 @@ name: Sync upstream & Build Docker
 
 on:
   schedule:
-    - cron: '0 */6 * * *'  # Ogni 6 ore
+    - cron: '0 */6 * * *'
   workflow_dispatch:
 
 jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
-      - name: Sync fork with upstream
-        uses: tgymnich/fork-sync@v2.0.10
+      - name: Sync fork
+        uses: tgymnich/fork-sync@v2.0.10  # Versione dai tuoi log[file:35]
         with:
           owner: wppconnect-team
           repo: wppconnect-server
@@ -26,44 +26,34 @@ jobs:
       packages: write
     steps:
       - name: Checkout
-        uses: actions/checkout@v6
+        uses: actions/checkout@v6  # La tua versione funziona[file:36]
+
+      - name: Setup Node **22** (richiesto package.json)
+        uses: actions/setup-node@v6.2.0  # La tua versione OK[file:36]
         with:
-          ref: main
+          node-version: '22.21.1'  # Da warning npm EBADENGINE[file:36]
+          cache: 'yarn'  # Per yarn.lock
 
-      # Build steps originali (Node + npm)
-      - name: Setup Node
-        uses: actions/setup-node@v6.2.0
-        with:
-          node-version: 24.13.0
-          cache: 'npm'  # Semplifica cache npm
+      - name: Install deps & build  # Per fix yarn.lock se mancante
+        run: |
+          yarn install  # Genera yarn.lock pulito
+          yarn run build
 
-      - name: Install Dependencies
-        run: npm ci || npm install
-        env:
-          PUPPETEER_SKIP_DOWNLOAD: true
-
-      - name: Build source
-        run: npm run build
-
-      # Docker build & push
-      - name: Login to GHCR
+      # Docker steps (già OK nei log)
+      - name: Login GHCR
         uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup QEMU
         uses: docker/setup-qemu-action@v3
 
-      - name: Setup Docker Buildx
+      - name: Setup Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build & Push image
-        uses: docker/build-push-action@v6
+      - name: Build & Push
+        uses: docker/build-push-action@v6  # La tua versione OK[file:36]
         with:
           context: .
-          file: ./Dockerfile
+          file: ./Dockerfile  # Corretto, esiste[file:36]
           push: true
           tags: |
             ghcr.io/${{ github.repository_owner }}/wppconnect-server:latest
