--- a/.github/workflows/sync-and-build.yml
+++ b/.github/workflows/sync-and-build.yml
@@ -45,8 +45,13 @@ jobs:
           yarn run build
 
       # Docker steps (già OK nei log)
-      - name: Login GHCR
+      - name: Login to GHCR
         uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}      # Il tuo username (siriostar89)
+          password: ${{ secrets.GITHUB_TOKEN }}  # Token automatico, ha write:packages[file:36]
+
 
       - name: Setup QEMU
         uses: docker/setup-qemu-action@v3
